Implement banner introduce products

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,10 +28,8 @@
 		color: rgb(81 81 81 / var(--tw-text-opacity));
 	}
 
-	.banner_products {
-		background-image: url('./img/heroBg.png');
-		min-height: 500px;
-		background-repeat: no-repeat;
-		background-size: cover;
+	.h-420 {
+		height: 420px;
+		width: 100%;
 	}
 }
