--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,11 +3,15 @@
 @tailwind utilities;
 
 @layer utilities {
+	:root {
+		--background-color: #faf9fb;
+	}
 	body {
 		margin: 0;
 		overflow-x: hidden;
-		font-family: 'Poppins', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-			Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		background-color: var(--background-color);
+		font-family: 'Poppins', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+			Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	}
 
 	nav {
@@ -26,6 +30,15 @@
 	.text-textColor {
 		--tw-text-opacity: 1;
 		color: rgb(81 81 81 / var(--tw-text-opacity));
+	}
+
+	.bg-cardOverlay {
+		box-shadow: 0px 0px 20px rgb(0 0 0 / 15%);
+	}
+
+	.love-filter {
+		filter: drop-shadow(0px 0px 8px #ff0000);
+		transition: 0.5s;
 	}
 
 	.h-420 {
