--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,14 +4,16 @@
 
 @layer utilities {
 	:root {
-		--background-color: #faf9fb;
+		--background-color: white;
 	}
+
 	body {
 		margin: 0;
 		overflow-x: hidden;
 		background-color: var(--background-color);
-		font-family: 'Poppins', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-			Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		font-family: "Poppins", sans-serif, -apple-system,
+			BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+			Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	}
 
 	nav {
