--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,9 +11,34 @@
 		margin: 0;
 		overflow-x: hidden;
 		background-color: var(--background-color);
-		font-family: "Poppins", sans-serif, -apple-system,
-			BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
-			Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+		font-family: "Public Sans", sans-serif !important;
+	}
+
+	.css-ahj2mt {
+		font-family: "Public Sans", sans-serif !important;
+		font-weight: 600;
+	}
+
+	.clearfix {
+		overflow-y: scroll;
+		width: 100%;
+		margin: 0 auto;
+		transition: 0.5s;
+	}
+
+	.clearfix::-webkit-scrollbar-track {
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		background-color: #f5f5f5;
+	}
+
+	.clearfix::-webkit-scrollbar {
+		width: 0px;
+		background-color: #f5f5f5;
+	}
+
+	.clearfix::-webkit-scrollbar-thumb {
+		background-color: #000000;
+		border: 2px solid #555555;
 	}
 
 	nav {
